--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui va el el titulo principal del post</h1>
-        <p> Aqui vael parrafo inicial del post</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p> Este es el parrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github</p>
+            </div>
+        </div>
     </body>
 </html>
