--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p> Este es el parrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github</p>
+                <p> Este es el parrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github.</p>
+                <p>Los blogs son la mejor forma de compartir información e ideas. mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora</p>
             </div>
         </div>
     </body>
