--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,10 @@
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p> Este es el parrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github.</p>
                 <p>Los blogs son la mejor forma de compartir información e ideas. mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora</p>
+                <p>Chicken nuggets pizza sauce.</p>
+            </div>
+            <div id="footer">
+                Abajo el covid y arriba las chivas 15/01/2021
             </div>
         </div>
     </body>
