se corrigieron acentos

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,12 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/homer.png"/>
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p> Este es el parrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github.</p>
-                <p>Los blogs son la mejor forma de compartir información e ideas. mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora</p>
+                <p> Este es el párrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github.</p>
+                <p>Los blogs son la mejor forma de compartir información e ideas, mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar pero estadísticamente no lo eres... por ahora</p>
                 <p>Chicken nuggets pizza sauce.</p>
             </div>
             <div id="footer">
