Cambié la dirección de la imagen del pato de local a web

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <div id="post">
                 <h1>Este es el título atractivo del post de Omar</h1>
                 <p> Este es el párrafo donde vamos a explicar las cosas impresionantes que se pueden realizar con git y github.</p>
-                <p><img src="imagenes/duck.png" width="100%"/></p>
+                <p><img src="https://img.pngio.com/random-duckpng-duck-png-1888_1750.png" width="100%"/></p>
                 <p>Los blogs son la mejor forma de compartir información e ideas, mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar pero estadísticamente no lo eres... por ahora</p>
                 <p>Chicken nuggets pizza sauce.</p>
             </div>
