--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/homer.png"/>
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo del post de Omar</h1>
